--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "",
+  "license": "not sure yet",
   "dependencies": {
     "elasticsearch": "^5.0.0",
     "moment": "^2.10.3",
     "request-promise": "^0.4.2",
     "underscore": "^1.8.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cyberFund/api.cyber.fund"
   }
 }
