--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "elasticsearch": "^5.0.0",
     "log4js": "^0.6.26",
+    "memwatch": "^0.2.2",
     "moment": "^2.10.3",
     "request-promise": "^0.4.2",
     "underscore": "^1.8.3",
