--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "elasticsearch": "^5.0.0",
-    "log4js": "^0.6.26",
-    "memwatch": "^0.2.2",
-    "moment": "^2.10.3",
-    "request-promise": "^0.4.2",
-    "underscore": "^1.8.3",
-    "when": "^3.7.3"
+    "elasticsearch": "^10.1.3",
+    "log4js": "^0.6.33",
+    "moment": "^2.12.0",
+    "request-promise": "^2.0.1",
+    "lodash": "^4.7.0",
+    "when": "^3.7.7"
   },
   "repository": {
     "type": "git",
